--- a/css/style.css
+++ b/css/style.css
@@ -209,12 +209,10 @@ section {
 
 /* banner ----------------------------------------------------*/
 .banner {
-    width: 100%;
-    background: url(images/banner-girl.png) no-repeat center 60px, url(images/flower-bkgd.jpg) repeat-x;
-    height: 600px;
+    background:linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba( 0,0,0,0.25) 100%), url('assets/images/banner-girl.png') no-repeat center 60px, url('assets/images/flower-bkgd.jpg') repeat-x center top;
+    height: 550px;
     position: relative;
-    background-size: 250px 615px,contain;
-      
+    background-size: cover, 250px 615px,contain;
 }
 
 .banner-text {
