--- a/css/style.css
+++ b/css/style.css
@@ -221,32 +221,35 @@ section {
 }
 
 .banner-text {
+    font-weight: bold;
+    text-transform: uppercase;
     color: white;
     text-align: center;
     position: absolute;
     left: 50%;
     top: 50%;
     line-height: 1;
-    transform: translate(-50%,-50%);
-    
-    
+    transform: translate(-50%,-50%);    
 }
 
 .newcollection {
     font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    font-family: 'ralewaylight', sans-serif;
 }
 
 .spring {
     font-size:4rem;
+    font-family: 'playfairdisplay', serif;
+    font-weight: normal;
+    text-transform: none;
 }
-
 
 /* styles ----------------------------------------------*/
 
 .styles {
     text-align: center;
     border-bottom: 1px solid #d7d7d7;
-    padding: 4rem 0;
 }
 
 .styles-text {
