--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,88 @@
 /* font-face here!!! */
 @font-face {
     font-family: 'playfairdisplay';
-    src: url('assets/fonts/playfairdisplay-regular-webfont.eot');
-    src: url('assets/fonts/playfairdisplay-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/playfairdisplay-regular-webfont.woff') format('woff'),
-         url('assets/fonts/playfairdisplay-regular-webfont.ttf') format('truetype'),
-         url('assets/fonts/playfairdisplay-regular-webfont.svg#playfairdisplay') format('svg');
+    src: url('../assets/fonts/playfairdisplay-regular-webfont.eot');
+    src: url('../assets/fonts/playfairdisplay-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/playfairdisplay-regular-webfont.woff') format('woff'),
+         url('../assets/fonts/playfairdisplay-regular-webfont.ttf') format('truetype'),
+         url('../assets/fonts/playfairdisplay-regular-webfont.svg#playfairdisplay') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'playfairdisplay';
-    src: url('assets/fonts/playfairdisplay-italic-webfont.eot');
-    src: url('assets/fonts/playfairdisplay-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/playfairdisplay-italic-webfont.woff') format('woff'),
-         url('assets/fonts/playfairdisplay-italic-webfont.ttf') format('truetype'),
-         url('assets/fonts/playfairdisplay-italic-webfont.svg#playfairdisplay') format('svg');
+    src: url('../assets/fonts/playfairdisplay-italic-webfont.eot');
+    src: url('../assets/fonts/playfairdisplay-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/playfairdisplay-italic-webfont.woff') format('woff'),
+         url('../assets/fonts/playfairdisplay-italic-webfont.ttf') format('truetype'),
+         url('../assets/fonts/playfairdisplay-italic-webfont.svg#playfairdisplay') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'playfairdisplay';
-    src: url('assets/fonts/playfairdisplay-bold-webfont.eot');
-    src: url('assets/fonts/playfairdisplay-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/playfairdisplay-bold-webfont.woff') format('woff'),
-         url('assets/fonts/playfairdisplay-bold-webfont.ttf') format('truetype'),
-         url('assets/fonts/playfairdisplay-bold-webfont.svg#playfairdisplay') format('svg');
+    src: url('../assets/fonts/playfairdisplay-bold-webfont.eot');
+    src: url('../assets/fonts/playfairdisplay-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/playfairdisplay-bold-webfont.woff') format('woff'),
+         url('../assets/fonts/playfairdisplay-bold-webfont.ttf') format('truetype'),
+         url('../assets/fonts/playfairdisplay-bold-webfont.svg#playfairdisplay') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'playfairdisplay';
-    src: url('assets/fonts/playfairdisplay-bolditalic-webfont.eot');
-    src: url('assets/fonts/playfairdisplay-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/playfairdisplay-bolditalic-webfont.woff') format('woff'),
-         url('assets/fonts/playfairdisplay-bolditalic-webfont.ttf') format('truetype'),
-         url('assets/fonts/playfairdisplay-bolditalic-webfont.svg#playfairdisplay') format('svg');
+    src: url('../assets/fonts/playfairdisplay-bolditalic-webfont.eot');
+    src: url('../assets/fonts/playfairdisplay-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/playfairdisplay-bolditalic-webfont.woff') format('woff'),
+         url('../assets/fonts/playfairdisplay-bolditalic-webfont.ttf') format('truetype'),
+         url('../assets/fonts/playfairdisplay-bolditalic-webfont.svg#playfairdisplay') format('svg');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'ralewaylight';
-    src: url('assets/fonts/raleway-light-webfont.eot');
-    src: url('assets/fonts/raleway-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/raleway-light-webfont.woff') format('woff'),
-         url('assets/fonts/raleway-light-webfont.ttf') format('truetype'),
-         url('assets/fonts/raleway-light-webfont.svg#ralewaylight') format('svg');
+    src: url('../assets/fonts/raleway-light-webfont.eot');
+    src: url('../assets/fonts/raleway-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/raleway-light-webfont.woff') format('woff'),
+         url('../assets/fonts/raleway-light-webfont.ttf') format('truetype'),
+         url('../assets/fonts/raleway-light-webfont.svg#ralewaylight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ralewaylight';
-    src: url('assets/fonts/raleway-lightitalic-webfont.eot');
-    src: url('assets/fonts/raleway-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/raleway-lightitalic-webfont.woff') format('woff'),
-         url('assets/fonts/raleway-lightitalic-webfont.ttf') format('truetype'),
-         url('assets/fonts/raleway-lightitalic-webfont.svg#ralewaylight') format('svg');
+    src: url('../assets/fonts/raleway-lightitalic-webfont.eot');
+    src: url('../assets/fonts/raleway-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/raleway-lightitalic-webfont.woff') format('woff'),
+         url('../assets/fonts/raleway-lightitalic-webfont.ttf') format('truetype'),
+         url('../assets/fonts/raleway-lightitalic-webfont.svg#ralewaylight') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'ralewaylight';
-    src: url('assets/fonts/raleway-medium-webfont.eot');
-    src: url('assets/fonts/raleway-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/raleway-medium-webfont.woff') format('woff'),
-         url('assets/fonts/raleway-medium-webfont.ttf') format('truetype'),
-         url('assets/fonts/raleway-medium-webfont.svg#ralewaylight') format('svg');
+    src: url('../assets/fonts/raleway-medium-webfont.eot');
+    src: url('../assets/fonts/raleway-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/raleway-medium-webfont.woff') format('woff'),
+         url('../assets/fonts/raleway-medium-webfont.ttf') format('truetype'),
+         url('../assets/fonts/raleway-medium-webfont.svg#ralewaylight') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ralewaylight';
-    src: url('assets/fonts/raleway-mediumitalic-webfont.eot');
-    src: url('assets/fonts/raleway-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/raleway-mediumitalic-webfont.woff') format('woff'),
-         url('assets/fonts/raleway-mediumitalic-webfont.ttf') format('truetype'),
-         url('assets/fonts/raleway-mediumitalic-webfont.svg#ralewaylight') format('svg');
+    src: url('../assets/fonts/raleway-mediumitalic-webfont.eot');
+    src: url('../assets/fonts/raleway-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/raleway-mediumitalic-webfont.woff') format('woff'),
+         url('../assets/fonts/raleway-mediumitalic-webfont.ttf') format('truetype'),
+         url('../assets/fonts/raleway-mediumitalic-webfont.svg#ralewaylight') format('svg');
     font-weight: bold;
     font-style: italic;
 }
@@ -209,7 +209,7 @@ section {
 
 /* banner ----------------------------------------------------*/
 .banner {
-    background:linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba( 0,0,0,0.25) 100%), url('assets/images/banner-girl.png') no-repeat center 60px, url('assets/images/flower-bkgd.jpg') repeat-x center top;
+    background:linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba( 0,0,0,0.25) 100%), url('../assets/images/banner-girl.png') no-repeat center 60px, url('../assets/images/flower-bkgd.jpg') repeat-x center top;
     height: 400px;
     position: relative;
     background-size: cover, 150px 369px, cover;
