--- a/css/style.css
+++ b/css/style.css
@@ -164,42 +164,44 @@ section {
     padding-bottom: 0.5rem;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .logo {
-    flex-basis: 20%;
+    flex: 0 1 50%;
+    align-self: flex-start;
 }
 
 .logo img {
-    width: 150px;
+    max-width: 120px;
 }
 
 .cart {
-    order: 3;
-    flex-basis: 20%;
+    flex: 0 1 50%;
     text-align: right;
+    width: 50px;
 }
 
 .cart img {
-    width: 60px;
+    width: 50px;
 }
 
 .navigation {
     flex: 1 0 auto;
     align-self: center;
-    flex-basis: 60%;
-    order: 2;
+    padding-top: 0.5rem;
 }
 
 .navigation ul {
+    padding-top: 0.5rem;
+    border-top: 1px solid #d7d7d7;
     text-align: center;
 }
 
 .navigation li {
     display: inline-block;
-    font-size: 1rem;
     font-weight:bold;
     text-transform: uppercase;
-    margin: 1rem;
+    margin:0 1rem;
 }
 
 .navigation li a {
