--- a/css/style.css
+++ b/css/style.css
@@ -244,12 +244,6 @@ section {
     position: relative;
     background-size: cover, 150px 369px, cover;
 }
-@media screen and (min-width: 1240px) {
-    .banner {
-        height: 550px;
-        background-size: cover, 250px 615px,contain;
-    }
-}
 
 .banner-text {
     font-weight: bold;
@@ -270,12 +264,26 @@ section {
 }
 
 .spring {
-    font-size:4rem;
+    font-size:2.5rem;
     font-family: 'playfairdisplay', serif;
     font-weight: normal;
     text-transform: none;
 }
 
+@media screen and (min-width: 600px) {
+    .spring {
+        font-size: 3rem;
+    }
+}
+@media screen and (min-width: 1240px) {
+    .banner {
+        height: 550px;
+        background-size: cover, 250px 615px,contain;
+    }
+    .spring {
+        font-size: 4rem;
+    }
+}
 /* styles ----------------------------------------------*/
 .styles {
     text-align: center;
