fix feature section

--- a/css/style.css
+++ b/css/style.css
@@ -416,16 +416,15 @@ h2 span {
 
 .featured-title {
     text-align: center;
-    margin-bottom: 2rem;
 }
-
 
 .cloth-type {
     text-transform: uppercase;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
+    font-size: 0.75rem;
 }
 
-.price {
+.price, .cloth-type {
     color: #969696;
     margin-top: 1rem;
 }
@@ -435,7 +434,6 @@ h2 span {
     text-align: center;
     padding: 3rem 2rem;
 }
-
 
 /* sign-up    ----------------------------------------------*/
 .updates {
