--- a/css/style.css
+++ b/css/style.css
@@ -511,59 +511,53 @@ input[type="submit"]:hover {
 /* footer ----------------------------------*/
 
 .contact {
-    background-color: #000000;
+    background-color: #242424;
     color: white;
-    padding: 4rem 2rem;
-    
+    padding: 4rem 0;
+    text-align: center;
 }
 
-.flex-container {
-    display: flex;
-    justify-content: space-between;
+.contact p {
+    font-family: 'playfairdisplay', serif;
 }
-
 
 .detail {
-    margin-left: 1rem;
-    font-size: 1rem;
+    line-height: 1.5;
 }
 
-.detail a {
+.contact a {
     color: white;
 }
 
-.detail a:hover {
-    color: red;
+.contact a:hover {
+    color: #e2574c;
 }
 
+.copyright, .tel {
+    margin-bottom: 1rem;
+}
 
 .address {
     color: #969696;
 }
 
 .links {
-    padding-right: 4rem;
+    font-family: 'ralewaylight', sans-serif;
+    margin-top: 2rem;
 }
 
 .links li {
-      font-family: 'ralewaylight';
-      height: 26px;
+    display: inline-block;
 }
 
 .links a{
     text-decoration: none;
-    color: white;
-}
-
-.links a:hover {
-    color: red;
 }
 
 .links i {
     min-width: 25px;
 }
 
-.fa {
-    display: inline-block;
-    text-rendering: auto;
+.links span {
+    display: none;
 }
