--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,6 @@ section {
 /* styles ----------------------------------------------*/
 .styles {
     text-align: center;
-    border-bottom: 1px solid #d7d7d7;
 }
 
 h2 span {
@@ -324,6 +323,17 @@ h2 span {
 .category1, .category2 {
     position: relative;
     border: 4px solid white;
+}
+
+.category1:before, .category2:before {
+    content: '';
+    float: left;
+}
+.category1:before {
+    padding-top: 50%;
+}
+.category2:before {
+    padding-top: 100%;
 }
 
 .category1 {
@@ -397,11 +407,14 @@ h2 span {
     .category2 {
         flex-basis: 25%;
     }
-    .men {
+    .mens {
         border-right: 4px solid white;
     }
     .trends, .bags {
         border-left: 4px solid white;
+    }
+    .bags {
+        border-right: 4px solid white;
     }
     .womens {
         border-left: 4px solid white;
