--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'playfairdisplay';
     src: url('../assets/fonts/playfairdisplay-italic-webfont.eot');
@@ -20,7 +19,6 @@
     font-weight: normal;
     font-style: italic;
 }
-
 @font-face {
     font-family: 'playfairdisplay';
     src: url('../assets/fonts/playfairdisplay-bold-webfont.eot');
@@ -31,7 +29,6 @@
     font-weight: bold;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'playfairdisplay';
     src: url('../assets/fonts/playfairdisplay-bolditalic-webfont.eot');
@@ -42,7 +39,6 @@
     font-weight: bold;
     font-style: italic;
 }
-
 @font-face {
     font-family: 'ralewaylight';
     src: url('../assets/fonts/raleway-light-webfont.eot');
@@ -53,7 +49,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'ralewaylight';
     src: url('../assets/fonts/raleway-lightitalic-webfont.eot');
@@ -64,7 +59,6 @@
     font-weight: normal;
     font-style: italic;
 }
-
 @font-face {
     font-family: 'ralewaylight';
     src: url('../assets/fonts/raleway-medium-webfont.eot');
@@ -75,7 +69,6 @@
     font-weight: bold;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'ralewaylight';
     src: url('../assets/fonts/raleway-mediumitalic-webfont.eot');
@@ -86,9 +79,7 @@
     font-weight: bold;
     font-style: italic;
 }
-
 /*  !!!!!!!!!!!!!   global settings here   !!!!!!!!!!!!!    */
-
 html {
     font-size: 14px;
 }
@@ -97,12 +88,10 @@ html {
         font-size: 16px;
     }
 }
-
 * {
     box-sizing: border-box;
     outline: none;
 }
-
 body, input {
     font-family:'ralewaylight', sans-serif;
     font-style: normal;
@@ -111,38 +100,31 @@ body, input {
     color: #2d2d2d;
     line-height: 2;
 }
-
 h1, h2, h3, h4, h5 {
     font-family: 'playfairdisplay', serif;
     font-style: normal;
     font-weight: normal;
     line-height: 1;
 }
-
 h2 {
     font-size: 2.4rem;
     font-style: italic;
     margin-bottom: 1.5rem;
 }
-
 h3 {
     font-size: 1.5rem;
     color: #e2574c;
     margin-bottom: 1rem;
 }
-
 p {
     font-family:'ralewaylight', sans-serif;
     font-weight: normal;
 }
-
 img {
     height: auto;
     max-width: 100%;
 }
-
 /*   for all   -------------------------------------------- */
-
 .container {
     width: 100%;
     margin: 0 auto;
@@ -153,11 +135,9 @@ img {
         max-width: 1240px;
     }
 }
-
 section {
     padding: 4rem 0;
 }
-
 /* header       -----------------------------------------------*/
 .header {
     padding-top: 1rem;
@@ -165,6 +145,11 @@ section {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+    background: white;
 }
 .logo {
     flex: 0 1 50%;
@@ -243,6 +228,7 @@ section {
     height: 400px;
     position: relative;
     background-size: cover, 150px 369px, cover;
+    margin-top: 114px;
 }
 
 .banner-text {
@@ -271,6 +257,9 @@ section {
 }
 
 @media screen and (min-width: 600px) {
+    .banner {
+        margin-top: 72px;
+    }
     .spring {
         font-size: 3rem;
     }
